chore: fix styling and spacing on various resolutions

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -79,3 +79,7 @@ blockquote {
 em {
 	display: block;
 }
+
+code[class*="language-"], pre[class*="language-"] {
+	white-space: pre-wrap !important;
+}
