--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -64,6 +64,7 @@
 
 @mixin page-container-default-styles() {
   margin: 4rem 0;
+  padding: 0 5rem;
   h1{
     border-bottom: 1px solid $sep;
     padding: 2rem 0;
